Schedule: add Lovable talk at 10:45, shift hacking to 11 AM, fix deliberation to 10 AM, em-dash check-in

--- a/site/src/components/sections/sections.css
+++ b/site/src/components/sections/sections.css
@@ -969,9 +969,9 @@
 }
 
 .schedule-row .thin-dash {
-  font-size: 0.55em;
+  font-size: 0.45em;
   font-weight: 500;
-  margin: 0 0.15em;
+  margin: 0 0.1em;
   vertical-align: baseline;
 }
 
